CI/CD Final 25/build-artifact-template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: "CloudFormation template for Final DevOps Homework by Anjell — EC2 with\
  \ Apache in custom VPC\n"
Parameters:
  InstanceType:
    Description: EC2 instance type.
    Type: String
    Default: t2.micro
  KeyName:
    Description: Name of an existing EC2 KeyPair for SSH access.
    Type: AWS::EC2::KeyPair::KeyName
  SSHLocation:
    Description: The IP address range that can SSH into the instance.
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: Must be a valid CIDR range of the form x.x.x.x/x
  ImageId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH via port 22
      VpcId: vpc-06d1e34c931674a14
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 80
        ToPort: 80
        IpProtocol: tcp
      - CidrIp:
          Ref: SSHLocation
        FromPort: 22
        ToPort: 22
        IpProtocol: tcp
  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: ImageId
      InstanceType:
        Ref: InstanceType
      KeyName:
        Ref: KeyName
      SubnetId: subnet-0466ed668dbd61c3c
      SecurityGroupIds:
      - Ref: WebServerSecurityGroup
      UserData:
        Fn::Base64: "#!/bin/bash\nyum update -y\nyum install -y httpd\nsystemctl start\
          \ httpd\nsystemctl enable httpd\necho \"<html><body><h1>Final Devops homework\
          \ by Anjell</h1></body></html>\" > /var/www/html/index.html\n"
Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value:
      Ref: WebServer
  PublicIP:
    Description: Public IP of the instance
    Value:
      Fn::GetAtt:
      - WebServer
      - PublicIp
